Montevideo/src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_User_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Owner</label>
        <referenceTo>CustomUser__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logo_Url__c</fullName>
        <label>Logo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IMAGE( Logo_Url__c, &quot;Logo&quot;, 300, 300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subcategory</label>
        <referenceTo>Subcategory__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Category_and_Subcategory_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Category__r.Name  &lt;&gt;   Subcategory__r.Category_Subcategory__r.Name</errorConditionFormula>
        <errorDisplayField>Subcategory__c</errorDisplayField>
        <errorMessage>Categoria y Subcategoria no coinciden</errorMessage>
    </validationRules>
</CustomObject>